# anomalyframework_python

./: .gitignore  .gitmodules  CMakeLists.txt  GUD_HELP.txt  LICENSE  README.md  analysis.py  debug.py  demo.py  frame_pixel_gt.py  helloworld.py  install.sh  requirements.txt  runscript.py  runscript_sed.py
anomalyframework/: liblinear_utils.py  parameters.py  results.py  run.py
anomalyframework/cpp/: example.runinfo  manipulatetrain.c
anomalyframework/cpp/multicore-liblinear/: .gitignore  CMakeLists.txt  README_allie  changenumbers  samplerun.sh  tron.cpp
anomalyframework/tests/: test_full.py  test_shuffle.py
src/: analysis_utils.py  default_pars.py  filenames.py  liblinear_utils.py  local_pyutils.py  parameter_classes.py  parameters.py  run.py  scoreanomalies_utils.py  shuffle.py  splits.py
src/cpp/: 1.runinfo  CMakeLists.txt  Makefile.linux  changenumbers.c  manipulatetrain.c  old_1.runinfo  old_example.runinfo  score_shuffle.cpp
src/cpp/multicore-liblinear/: cmake_install.cmake
src/liblinear-alliemodified/: Makefile  allie.c  manipulatetrain.c
src/tests/: test_full.py  test_shuffle.py
unit_tests/: 0.runinfo  example.py  example.runinfo  example.train  example_runscript.py
